lib/nails_derive/tests/ui/from-request-enum.stderr
error: Preroute cannot be derived for enums or unions
 --> $DIR/from-request-enum.rs:4:1
  |
4 | / #[nails(path = "/api/posts/{id}")]
5 | | pub enum GetPostRequest {
6 | |     Foo {}
7 | | }
  | |_^

error: could not compile `nails_derive-tests`.
